--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Profeta Rebelde - Ultra Mágico</title>
+    <title>El Profeta Rebelde - Edición Suprema</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Special+Elite&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Special+Elite&family=MedievalSharp&display=swap');
 
         :root {
             --oro: #c5a059; --oro-brillante: #d4af37; --sangre: #8b0000;
@@ -13,193 +13,216 @@
         }
 
         body {
-            margin: 0; background: var(--oscuro);
+            margin: 0; background: var(--oscuro) url('https://www.transparenttextures.com/patterns/dark-matter.png');
             color: #2c1e11; font-family: 'Special Elite', cursive;
-            display: flex; justify-content: center; overflow-x: hidden;
-            touch-action: manipulation;
+            display: flex; justify-content: center; padding: 10px; overflow-x: hidden;
         }
 
-        /* --- EFECTO DE CHISPAS --- */
+        /* --- EFECTO DE CHISPAS MÁGICAS --- */
         .sparkle {
-            position: absolute; width: 6px; height: 6px; background: var(--oro-brillante);
-            border-radius: 50%; pointer-events: none; z-index: 9999;
-            animation: fly 0.8s ease-out forwards;
+            position: absolute; width: 5px; height: 5px; background: var(--oro-brillante);
+            border-radius: 50%; pointer-events: none; z-index: 10000;
+            animation: fly 0.6s ease-out forwards;
         }
         @keyframes fly {
             0% { transform: translate(0,0) scale(1); opacity: 1; }
             100% { transform: translate(var(--x), var(--y)) scale(0); opacity: 0; }
         }
 
+        /* --- DISEÑO DEL PERIÓDICO --- */
         .paper {
             background: var(--pergamino) url('https://www.transparenttextures.com/patterns/paper-fibers.png');
-            width: 100%; max-width: 500px; padding: 25px;
-            box-shadow: 0 0 50px rgba(0,0,0,0.9); border: 8px double #8b6d45;
+            width: 100%; max-width: 550px; padding: 25px;
+            box-shadow: 0 0 50px rgba(0,0,0,0.9); border: 10px double #8b6d45;
             box-sizing: border-box; min-height: 100vh; position: relative;
         }
 
-        /* Flash Mágico */
-        .flash-effect {
-            position: fixed; top:0; left:0; width:100%; height:100%;
-            background: white; opacity:0; pointer-events:none; z-index:10000;
+        header { text-align: center; border-bottom: 8px double var(--oscuro); margin-bottom: 25px; }
+        header h1 { font-family: 'Cinzel', serif; font-size: clamp(30px, 8vw, 50px); margin: 5px 0; }
+
+        .noticia-card {
+            background: white; padding: 20px; margin-bottom: 25px; border-radius: 2px;
+            border: 1px solid rgba(0,0,0,0.1); box-shadow: 6px 6px 0px rgba(0,0,0,0.1);
+            position: relative; transition: 0.3s;
         }
 
-        header h1 { font-family: 'Cinzel', serif; font-size: 35px; text-align: center; margin: 10px 0; }
-
-        /* Estilo Vociferadora Mejorado */
         .vociferadora {
-            border: 3px solid var(--sangre) !important;
-            background: #fff0f0 !important;
-            animation: scream 0.2s infinite;
-            box-shadow: 0 0 20px rgba(139, 0, 0, 0.4) !important;
+            border: 3px solid var(--sangre) !important; background: #fff5f5 !important;
+            animation: tremor 0.2s infinite; box-shadow: 0 0 15px var(--sangre) !important;
         }
-        @keyframes scream {
-            0% { transform: rotate(0.5deg) scale(1.01); }
-            100% { transform: rotate(-0.5deg) scale(1); }
+        @keyframes tremor { 0% { transform: rotate(0.5deg); } 100% { transform: rotate(-0.5deg); } }
+
+        /* --- FORMULARIO PREMIUM --- */
+        .box-envio {
+            background: var(--oscuro); color: var(--pergamino); padding: 25px;
+            border-radius: 12px; border: 3px solid var(--oro); margin-top: 50px;
+        }
+        input, textarea, select {
+            width: 100%; padding: 12px; margin: 8px 0; border: 2px solid var(--oro);
+            background: #fffdf5; font-family: 'Special Elite'; font-size: 15px; box-sizing: border-box;
         }
 
         .btn-magico {
-            background: var(--oro-brillante); color: black; border: none;
-            padding: 15px; width: 100%; font-family: 'Cinzel'; font-weight: 900;
-            font-size: 20px; cursor: pointer; border-radius: 5px; margin-top: 10px;
-            transition: 0.2s; box-shadow: 0 4px 0 #8b6d45;
+            background: var(--oro-brillante); color: #000; border: none; padding: 18px;
+            width: 100%; font-family: 'Cinzel'; font-weight: 900; font-size: 20px;
+            cursor: pointer; transition: 0.3s; border-radius: 5px;
         }
-        .btn-magico:active { transform: translateY(4px); box-shadow: none; }
+        .btn-magico:hover { background: white; box-shadow: 0 0 15px var(--oro-brillante); }
 
-        .noticia-card {
-            background: white; padding: 15px; margin-bottom: 20px;
-            border: 1px solid #ccc; position: relative; transition: 0.5s;
-        }
-
-        #btn-sonido {
-            position: fixed; bottom: 10px; right: 10px; z-index: 1000;
-            background: var(--sangre); color: white; border: none; border-radius: 50%;
-            width: 40px; height: 40px; cursor: pointer; font-size: 20px;
-        }
+        .tag { font-size: 10px; padding: 3px 8px; color: white; font-weight: bold; border-radius: 3px; }
+        .Gryffindor { background: #740001; } .Slytherin { background: #1a472a; }
+        .Hufflepuff { background: #ecb939; color: black; } .Ravenclaw { background: #0e1a40; }
+        .OFICIAL { background: var(--oro); color: black; }
     </style>
 </head>
-<body onclick="crearChispas(event)">
-
-    <div class="flash-effect" id="flash"></div>
-    <button id="btn-sonido" onclick="activarAudio()">🔈</button>
+<body onclick="magiaClick(event)">
 
     <div class="paper">
-        <div id="pantalla-login" style="text-align:center; padding-top:40px;">
-            <h1 style="font-family:'Cinzel'">IDENTIFICACIÓN</h1>
-            <input type="text" id="u-name" placeholder="Tu Nombre..." style="width:80%; padding:15px; margin:10px; border:2px solid var(--oro);">
-            <select id="u-house" style="width:87%; padding:15px; border:2px solid var(--oro);">
+        <div id="login" style="text-align:center; padding: 50px 10px;">
+            <h1 style="font-family:'Cinzel'">REGISTRO MÁGICO</h1>
+            <input type="text" id="mago-nombre" placeholder="Tu Nombre...">
+            <select id="mago-casa">
                 <option value="Gryffindor">Gryffindor 🦁</option>
                 <option value="Slytherin">Slytherin 🐍</option>
                 <option value="Hufflepuff">Hufflepuff 🦡</option>
                 <option value="Ravenclaw">Ravenclaw 🦅</option>
             </select>
-            <button class="btn-magico" onclick="login()">ENTRAR ✨</button>
+            <button class="btn-magico" onclick="entrar()">ENTRAR ✨</button>
         </div>
 
-        <div id="web" style="display:none;">
+        <div id="main-web" style="display:none;">
             <header>
-                <h1 id="titulo-web">EL PROFETA</h1>
-                <p id="user-info" style="text-align:center; font-size:12px; margin:0;"></p>
+                <button onclick="salir()" style="float:right; background:none; border:none; color:var(--sangre); font-size:10px; cursor:pointer;">CERRAR SESIÓN</button>
+                <h1>EL PROFETA</h1>
+                <div id="user-bar" style="font-size:11px; font-weight:bold; border-top:1px solid #000; padding:5px;"></div>
             </header>
 
-            <div id="lista"></div>
+            <div id="lista-oficial"></div>
+            <div id="lista-alumnos"></div>
 
-            <div style="background:var(--oscuro); padding:20px; border-radius:10px; margin-top:30px; color:var(--pergamino);">
-                <h3 style="text-align:center; font-family:'Cinzel'; color:var(--oro);">🖋️ REDACTAR</h3>
-                <input type="text" id="p-tit" placeholder="Título...">
-                <textarea id="p-txt" rows="4" placeholder="Contenido..."></textarea>
-                <select id="p-est">
+            <div class="box-envio">
+                <h3 style="text-align:center; font-family:'Cinzel'; color:var(--oro); margin:0;">🖋️ REDACTAR PRIMICIA</h3>
+                <input type="text" id="tit" placeholder="Título impactante...">
+                <textarea id="msg" rows="4" placeholder="Cuéntanos el chisme..."></textarea>
+                <input type="text" id="img" placeholder="URL de Imagen/GIF (Opcional)">
+                <select id="est">
                     <option value="normal">Estilo Normal</option>
                     <option value="vociferadora">Vociferadora 🔥</option>
                 </select>
-                <button class="btn-magico" onclick="publicar()">LANZAR HECHIZO ✨</button>
+                <div style="display:flex; align-items:center; gap:10px; margin:10px 0;">
+                    <label style="font-size:12px;">TINTA:</label>
+                    <input type="color" id="col" value="#8b0000" style="width:40px; height:40px; border:none; background:none;">
+                </div>
+                <button class="btn-magico" onclick="enviar()">PUBLICAR ✨</button>
             </div>
         </div>
     </div>
 
-    <audio id="snd-click" src="https://assets.mixkit.co/active_storage/sfx/2571/2571-preview.mp3"></audio>
     <audio id="snd-magic" src="https://assets.mixkit.co/active_storage/sfx/2014/2014-preview.mp3"></audio>
-    <audio id="snd-write" src="https://www.soundjay.com/misc/sounds/writing-on-paper-1.mp3"></audio>
+    <audio id="snd-write" src="https://assets.mixkit.co/active_storage/sfx/2571/2571-preview.mp3"></audio>
 
     <script>
-        const DB = "https://profeta-9c8df-default-rtdb.firebaseio.com/periodico";
-        let mago = JSON.parse(localStorage.getItem('mago_final'));
-        let audioActivo = false;
+        const URL_DB = "https://profeta-9c8df-default-rtdb.firebaseio.com/periodico";
+        let sesion = JSON.parse(localStorage.getItem('sesion_maga'));
+        let misVotos = JSON.parse(localStorage.getItem('votos_ok')) || [];
 
-        function activarAudio() {
-            audioActivo = true;
-            document.getElementById('btn-sonido').innerText = "🔊";
-            document.getElementById('snd-magic').play();
-            alert("¡Magia activada! Ya puedes escuchar los efectos.");
-        }
-
-        function crearChispas(e) {
-            if(audioActivo) document.getElementById('snd-click').cloneNode(true).play();
-            for(let i=0; i<8; i++) {
+        // EFECTO DE CHISPAS AL TOCAR
+        function magiaClick(e) {
+            for(let i=0; i<6; i++){
                 const s = document.createElement('div');
                 s.className = 'sparkle';
-                s.style.left = e.pageX + 'px';
-                s.style.top = e.pageY + 'px';
-                s.style.setProperty('--x', (Math.random()*100 - 50)+'px');
-                s.style.setProperty('--y', (Math.random()*100 - 50)+'px');
+                s.style.left = e.pageX + 'px'; s.style.top = e.pageY + 'px';
+                s.style.setProperty('--x', (Math.random()*80-40)+'px');
+                s.style.setProperty('--y', (Math.random()*80-40)+'px');
                 document.body.appendChild(s);
-                setTimeout(() => s.remove(), 800);
+                setTimeout(()=> s.remove(), 600);
             }
         }
 
-        function login() {
-            const n = document.getElementById('u-name').value;
-            const c = document.getElementById('u-house').value;
-            if(!n) return;
-            mago = { n, c };
-            localStorage.setItem('mago_final', JSON.stringify(mago));
-            if(audioActivo) document.getElementById('snd-magic').play();
+        function entrar() {
+            const n = document.getElementById('mago-nombre').value;
+            const c = document.getElementById('mago-casa').value;
+            if(!n) return alert("Identifícate.");
+            sesion = { n, c };
+            localStorage.setItem('sesion_maga', JSON.stringify(sesion));
+            document.getElementById('snd-magic').play(); // Activa el permiso de audio
             mostrar();
         }
 
+        function salir() { localStorage.removeItem('sesion_maga'); location.reload(); }
+
         function mostrar() {
-            if(!mago) return;
-            document.getElementById('pantalla-login').style.display = 'none';
-            document.getElementById('web').style.display = 'block';
-            document.getElementById('user-info').innerText = `${mago.n} de ${mago.c}`;
+            if(!sesion) return;
+            document.getElementById('login').style.display = 'none';
+            document.getElementById('main-web').style.display = 'block';
+            document.getElementById('user-bar').innerText = `👤 ${sesion.n} | CASA: ${sesion.c}`;
             cargar();
         }
 
-        function publicar() {
-            const t = document.getElementById('p-tit').value;
-            const tx = document.getElementById('p-txt').value;
-            const es = document.getElementById('p-est').value;
+        function enviar() {
+            const t = document.getElementById('tit').value;
+            const m = document.getElementById('msg').value;
+            const i = document.getElementById('img').value;
+            const e = document.getElementById('est').value;
+            const c = document.getElementById('col').value;
 
-            if(!t || !tx) return;
+            if(!t || !m) return alert("Faltan datos.");
 
-            // Efecto Flash
-            document.getElementById('flash').style.opacity = "1";
-            setTimeout(() => document.getElementById('flash').style.opacity = "0", 300);
-
-            if(audioActivo) document.getElementById('snd-write').play();
-            if(es === 'vociferadora' && navigator.vibrate) navigator.vibrate([200, 100, 200]);
+            document.getElementById('snd-write').play(); // Sonido al enviar
+            if(e === 'vociferadora' && navigator.vibrate) navigator.vibrate(300);
 
             const id = "ID_" + Date.now();
-            const data = { id, titulo: t, texto: tx, estilo: es, autor: mago.n, casa: mago.c, votos: 0 };
+            const data = { id, titulo: t, texto: m, img: i, estilo: e, color: c, autor: sesion.n, casa: sesion.c, votos: 0 };
 
-            fetch(`${DB}/${id}.json`, { method: 'PUT', body: JSON.stringify(data) }).then(() => location.reload());
+            fetch(`${URL_DB}/${id}.json`, { method: 'PUT', body: JSON.stringify(data) })
+            .then(() => location.reload());
         }
 
         function cargar() {
-            fetch(`${DB}.json`).then(r => r.json()).then(data => {
+            fetch(`${URL_DB}.json`).then(r => r.json()).then(data => {
                 if(!data) return;
-                const notas = Object.values(data).reverse();
-                document.getElementById('lista').innerHTML = notas.map(n => `
-                    <div class="noticia-card ${n.estilo === 'vociferadora' ? 'vociferadora' : ''}">
-                        <small style="color:var(--oro)">${n.casa}</small>
-                        <h3 style="margin:5px 0;">${n.titulo}</h3>
-                        <p>${n.texto}</p>
-                        <small>🖊️ ${n.autor}</small>
-                    </div>
-                `).join('');
+                const notas = Object.values(data).filter(n => n && n.id).reverse();
+                
+                let htmlOficial = "";
+                let htmlAlumnos = "";
+
+                notas.forEach(n => {
+                    const yaVoto = misVotos.includes(n.id);
+                    const card = `
+                        <div class="noticia-card ${n.estilo === 'vociferadora' ? 'vociferadora' : ''}" style="border-left: 8px solid ${n.color}">
+                            <span class="tag ${n.casa}">${n.casa}</span>
+                            <h3 style="color:${n.color}; font-family:'Cinzel'; margin:10px 0;">${n.titulo}</h3>
+                            ${n.img ? `<img src="${n.img}" style="width:100%; border-radius:4px;">` : ''}
+                            <p>${n.texto}</p>
+                            <div style="display:flex; justify-content:space-between; align-items:center;">
+                                <small>🖊️ ${n.autor}</small>
+                                <button onclick="votar('${n.id}', ${n.votos || 0})" 
+                                    style="background:none; border:1px solid ${n.color}; color:${n.color}; padding:5px; cursor:pointer;"
+                                    ${yaVoto ? 'disabled' : ''}>
+                                    ${yaVoto ? '✅' : '🔥 ' + (n.votos || 0)}
+                                </button>
+                            </div>
+                        </div>
+                    `;
+                    if(n.casa === "OFICIAL") htmlOficial += card;
+                    else htmlAlumnos += card;
+                });
+
+                document.getElementById('lista-oficial').innerHTML = htmlOficial ? `<h2 style="font-family:Cinzel;">🖋️ OFICIAL</h2>` + htmlOficial : '';
+                document.getElementById('lista-alumnos').innerHTML = `<h2 style="font-family:Cinzel;">🔥 CHISMES</h2>` + htmlAlumnos;
             });
         }
 
-        if(mago) mostrar();
+        async function votar(id, actual) {
+            if(misVotos.includes(id)) return;
+            document.getElementById('snd-magic').play();
+            misVotos.push(id);
+            localStorage.setItem('votos_ok', JSON.stringify(misVotos));
+            await fetch(`${URL_DB}/${id}/votos.json`, { method: 'PUT', body: JSON.stringify(actual + 1) });
+            cargar();
+        }
+
+        if(sesion) mostrar();
     </script>
 </body>
 </html>
