--- a/index.html
+++ b/index.html
@@ -3,170 +3,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Profeta - Edición Oficial</title>
+    <title>El Profeta - Edición Orion</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Special+Elite&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap');
 
         :root {
-            --pergamino: #e8d9b5; --pergamino-oscuro: #d4c197;
-            --tinta: #1a1a1a; --oro-viejo: #8b6d45; --sangre: #8b0000;
+            --pergamino: #e8d9b5; --oro-real: #b08d57;
+            --tinta: #1a1a1a; --sangre: #8b0000; --sombra: rgba(0,0,0,0.15);
         }
 
         body {
-            margin: 0; background: #222 url('https://www.transparenttextures.com/patterns/dark-matter.png');
-            color: var(--tinta); font-family: 'Old Standard TT', serif;
-            display: flex; justify-content: center; padding: 15px;
+            margin: 0; background: #111; color: var(--tinta);
+            font-family: 'Old Standard TT', serif; display: flex; justify-content: center; padding: 10px;
         }
 
-        /* --- ESTRUCTURA DE PERIÓDICO --- */
         .newspaper {
             background: var(--pergamino) url('https://www.transparenttextures.com/patterns/paper-fibers.png');
             width: 100%; max-width: 650px; min-height: 100vh;
-            padding: 30px; box-sizing: border-box;
-            border: 2px solid #333; box-shadow: 0 0 40px rgba(0,0,0,0.7);
-            position: relative;
+            padding: 25px; box-sizing: border-box; border: 1px solid #000;
+            box-shadow: 0 0 50px rgba(0,0,0,0.8);
         }
 
-        header {
-            text-align: center; border-bottom: 5px solid var(--tinta);
-            margin-bottom: 20px; padding-bottom: 10px;
+        /* --- CABECERA --- */
+        header { text-align: center; border-bottom: 8px double var(--tinta); margin-bottom: 15px; }
+        header h1 { font-family: 'Cinzel', serif; font-size: clamp(45px, 12vw, 75px); margin: 0; font-weight: 900; }
+        
+        .meta-bar {
+            display: flex; justify-content: space-between; border-top: 2px solid #000;
+            padding: 5px 0; font-weight: bold; font-size: 11px; text-transform: uppercase;
         }
 
-        header h1 {
-            font-family: 'Cinzel', serif; font-size: clamp(40px, 10vw, 65px);
-            margin: 0; letter-spacing: -2px; line-height: 1; font-weight: 900;
+        /* --- MARQUESINA DE NOTICIAS RANDOM --- */
+        .breaking-news {
+            background: #000; color: #fff; padding: 10px; font-family: 'Cinzel';
+            font-size: 13px; text-align: center; margin-bottom: 20px;
+            border-radius: 2px; min-height: 20px;
         }
 
-        .sub-header {
-            display: flex; justify-content: space-between; border-top: 2px solid var(--tinta);
-            border-bottom: 2px solid var(--tinta); padding: 5px 0;
-            font-size: 12px; font-weight: bold; text-transform: uppercase; margin-top: 10px;
+        /* --- DIFERENCIACIÓN DE SECCIONES --- */
+        .section-title {
+            font-family: 'Cinzel'; background: var(--tinta); color: var(--pergamino);
+            text-align: center; padding: 8px; letter-spacing: 4px; margin: 40px 0 20px 0;
         }
 
-        /* --- SECCIONES --- */
-        .section-divider {
-            background: var(--tinta); color: var(--pergamino);
-            text-align: center; padding: 5px; font-family: 'Cinzel';
-            letter-spacing: 5px; font-size: 14px; margin: 40px 0 25px 0;
+        /* ESTILO OFICIAL: ELEGante Y DORADO */
+        .oficial-card {
+            border: 4px double var(--oro-real); background: rgba(255,255,255,0.4);
+            padding: 20px; margin-bottom: 30px; position: relative;
+            box-shadow: 0 5px 15px var(--sombra);
+        }
+        .oficial-card::before { content: "📜 DECRETO OFICIAL"; display: block; font-family: 'Cinzel'; font-size: 10px; color: var(--oro-real); margin-bottom: 10px; font-weight: bold; }
+
+        /* ESTILO ALUMNOS: RECORTES DE PAPEL */
+        .alumno-card {
+            border: 1px solid rgba(0,0,0,0.2); padding: 15px; margin-bottom: 25px;
+            background: rgba(255,255,255,0.2); border-left: 5px solid #444;
         }
 
-        /* --- NOTICIAS ESTILO PROFETA --- */
-        .article {
-            border-bottom: 1px solid rgba(0,0,0,0.2);
-            padding-bottom: 30px; margin-bottom: 30px;
-            position: relative;
-        }
-
-        .article h3 {
-            font-family: 'Cinzel', serif; font-size: 28px; margin: 0 0 10px 0;
-            line-height: 1.1; text-align: justify; border-bottom: 1px solid #333;
-        }
-
-        .article-meta { font-size: 11px; font-style: italic; margin-bottom: 10px; display: block; }
-
-        .article p {
-            font-size: 16px; line-height: 1.4; text-align: justify;
-            column-count: 1; /* Por defecto 1 para móvil */
-        }
-
-        @media (min-width: 500px) {
-            .article p { column-count: 2; column-gap: 20px; }
-        }
-
-        .article img {
-            width: 100%; border: 4px solid var(--tinta);
-            filter: sepia(0.5) contrast(1.2); margin: 10px 0;
-        }
+        .article h3 { font-family: 'Cinzel'; font-size: 26px; margin: 0 0 10px 0; }
+        .article img { width: 100%; filter: sepia(0.4) contrast(1.1); border: 1px solid #000; margin: 10px 0; }
+        .article p { font-size: 16px; line-height: 1.5; text-align: justify; }
 
         /* --- VOCIFERADORA --- */
         .vociferadora {
-            background: rgba(139, 0, 0, 0.05); border: 2px solid var(--sangre);
-            padding: 15px; transform: rotate(-1deg);
+            background: #fff0f0 !important; border: 2px solid var(--sangre) !important;
+            animation: shake 0.2s infinite;
         }
-        .vociferadora h3, .vociferadora p {
-            color: var(--sangre) !important;
-            animation: tremor 0.2s infinite;
-            text-shadow: 1px 1px 0px rgba(0,0,0,0.1);
-        }
+        .vociferadora * { color: var(--sangre) !important; font-weight: bold; }
+        @keyframes shake { 0% { transform: rotate(0.5deg); } 100% { transform: rotate(-0.5deg); } }
 
-        @keyframes tremor {
-            0% { transform: translate(1px, 1px) rotate(0deg); }
-            50% { transform: translate(-1px, -1px) rotate(-1deg); }
-            100% { transform: translate(1px, 1px) rotate(1deg); }
-        }
-
-        /* --- LOGIN & FORMS --- */
+        /* --- FORMS --- */
         .magic-form {
-            background: var(--pergamino-oscuro); border: 3px double var(--tinta);
-            padding: 25px; margin-top: 50px;
+            background: rgba(0,0,0,0.05); border: 2px dashed #000; padding: 20px; margin-top: 50px;
         }
         input, textarea, select {
-            width: 100%; padding: 12px; margin: 10px 0; background: rgba(255,255,255,0.3);
-            border: 1px solid var(--tinta); font-family: 'Special Elite';
+            width: 100%; padding: 12px; margin: 10px 0; background: #fff;
+            border: 1px solid #000; font-family: 'Special Elite'; box-sizing: border-box;
         }
         .btn {
-            background: var(--tinta); color: var(--pergamino);
-            border: none; padding: 15px; width: 100%; font-family: 'Cinzel';
-            font-weight: bold; font-size: 18px; cursor: pointer; transition: 0.3s;
-        }
-        .btn:hover { background: #444; }
-
-        .voto-area {
-            display: flex; justify-content: space-between; align-items: center;
-            margin-top: 15px; border-top: 1px solid var(--tinta); padding-top: 10px;
+            background: #000; color: #fff; border: none; padding: 15px;
+            width: 100%; font-family: 'Cinzel'; font-weight: bold; cursor: pointer;
         }
 
-        .tag-house {
-            font-weight: bold; border: 1px solid var(--tinta); padding: 2px 5px; font-size: 10px;
-        }
+        .voto-btn { background: none; border: 1px solid #000; padding: 5px 10px; cursor: pointer; font-family: 'Cinzel'; font-size: 11px; }
+        .voto-btn:disabled { opacity: 0.5; cursor: default; }
     </style>
 </head>
 <body>
 
 <div class="newspaper">
-    <div id="login-box" style="text-align: center; padding: 50px 0;">
-        <h1 style="font-family: 'Cinzel'; border-bottom: 5px solid #000;">IDENTIFICACIÓN</h1>
-        <p>REQUERIDO POR EL MINISTERIO DE MAGIA</p>
-        <input type="text" id="reg-user" placeholder="Nombre de Mago/Bruja">
-        <input type="password" id="reg-pass" placeholder="Contraseña de Seguridad">
-        <select id="reg-house">
+    <div id="login-screen" style="text-align:center; padding: 60px 0;">
+        <h1 style="font-family:'Cinzel'">DIARIO EL PROFETA</h1>
+        <p>CONTROL DE ACCESO - MINISTERIO DE MAGIA</p>
+        <input type="text" id="l-user" placeholder="Usuario Mágico">
+        <input type="password" id="l-pass" placeholder="Contraseña">
+        <select id="l-house">
             <option value="GRYFFINDOR">GRYFFINDOR</option>
             <option value="SLYTHERIN">SLYTHERIN</option>
             <option value="HUFFLEPUFF">HUFFLEPUFF</option>
             <option value="RAVENCLAW">RAVENCLAW</option>
         </select>
-        <button class="btn" onclick="acceder()">ENTRAR A LA REDACCIÓN ✨</button>
+        <button class="btn" onclick="entrar()">ACCEDER A LA REDACCIÓN ✨</button>
     </div>
 
-    <div id="main-content" style="display:none;">
+    <div id="web-content" style="display:none;">
         <header>
             <h1>EL PROFETA</h1>
-            <div class="sub-header">
+            <div class="meta-bar">
                 <span id="fecha-m"></span>
-                <span>Precio: 5 Gales</span>
-                <span onclick="salir()" style="cursor:pointer;">[ CERRAR SESIÓN ]</span>
+                <span id="reloj-m"></span>
+                <span onclick="salir()" style="cursor:pointer;">SALIR</span>
             </div>
         </header>
 
-        <div id="noticias-oficiales"></div>
-        <div id="noticias-alumnos"></div>
+        <div class="breaking-news" id="ticker">Cargando correspondencia vía lechuza...</div>
 
-        <div class="section-divider">REDACTAR NOTICIA</div>
+        <div id="feed-oficial"></div>
+        <div id="feed-alumnos"></div>
+
+        <div class="section-title">REDACTAR PRIMICIA</div>
         <div class="magic-form">
-            <input type="text" id="tit" placeholder="Título de la Primicia">
-            <textarea id="msg" rows="5" placeholder="Relato de los hechos..."></textarea>
-            <input type="text" id="img-url" placeholder="URL de Imagen Mágica">
-            <div style="display: flex; gap: 10px;">
+            <input type="text" id="tit" placeholder="Título">
+            <textarea id="msg" rows="4" placeholder="¿Qué noticias traes?"></textarea>
+            <input type="text" id="img" placeholder="URL Imagen">
+            <div style="display:flex; gap:10px;">
                 <select id="ran">
                     <option value="ALUMNO">Alumno</option>
                     <option value="OFICIAL">Escritor Real</option>
                 </select>
                 <select id="est">
-                    <option value="normal">Normal</option>
+                    <option value="normal">Estilo Normal</option>
                     <option value="vociferadora">Vociferadora 🔥</option>
                 </select>
             </div>
-            <button class="btn" onclick="enviarNoticia()">LANZAR HECHIZO ✨</button>
+            <button class="btn" onclick="enviar()">PUBLICAR NOTICIA ✨</button>
         </div>
     </div>
 </div>
@@ -175,89 +145,108 @@
 
 <script>
     const DB = "https://profeta-9c8df-default-rtdb.firebaseio.com/periodico";
-    const CLAVE_OFICIAL = "Orion2026";
-    let sesionActual = JSON.parse(localStorage.getItem('sesion_profeta_v9'));
+    const PASS_ESCRITOR = "Orion2026";
+    let sesion = JSON.parse(localStorage.getItem('sesion_v10'));
 
-    function acceder() {
-        const u = document.getElementById('reg-user').value.trim();
-        const p = document.getElementById('reg-pass').value.trim();
-        const h = document.getElementById('reg-house').value;
-        if(!u || !p) return alert("Identifícate ante el Ministerio.");
-        
-        sesionActual = { u, p, h };
-        localStorage.setItem('sesion_profeta_v9', JSON.stringify(sesionActual));
+    const RANDOM_NEWS = [
+        "🦉 ¡Escándalo! Se pierden 100 cartas de San Valentín en la lechucería.",
+        "🧙‍♂️ El Ministro de Magia visto comprando calderos de segunda mano.",
+        "🧹 Nimbus anuncia la nueva Saeta de Fuego con frenos de dragón.",
+        "🍺 Hogsmeade reporta escasez crítica de Cerveza de Mantequilla.",
+        "🐍 RUMOR: Un heredero de Slytherin fue visto en las cocinas.",
+        "🦁 Gryffindor gana puntos por un poema dedicado a la Profesora McGonagall."
+    ];
+
+    function actualizarTicker() {
+        const ticker = document.getElementById('ticker');
+        ticker.innerText = RANDOM_NEWS[Math.floor(Math.random() * RANDOM_NEWS.length)];
+    }
+    setInterval(actualizarTicker, 5000);
+
+    function actualizarReloj() {
+        const ahora = new Date();
+        document.getElementById('reloj-m').innerText = ahora.toLocaleTimeString('es-ES', {hour: '2-digit', minute:'2-digit', second:'2-digit'});
+    }
+    setInterval(actualizarReloj, 1000);
+
+    function entrar() {
+        const u = document.getElementById('l-user').value.trim();
+        const p = document.getElementById('l-pass').value.trim();
+        const h = document.getElementById('l-house').value;
+        if(!u || !p) return;
+        sesion = { u, h };
+        localStorage.setItem('sesion_v10', JSON.stringify(sesion));
         document.getElementById('snd-magic').play();
-        render();
+        mostrarWeb();
     }
 
-    function salir() { localStorage.removeItem('sesion_profeta_v9'); location.reload(); }
+    function salir() { localStorage.removeItem('sesion_v10'); location.reload(); }
 
-    function render() {
-        if(!sesionActual) return;
-        document.getElementById('login-box').style.display = 'none';
-        document.getElementById('main-content').style.display = 'block';
+    function mostrarWeb() {
+        if(!sesion) return;
+        document.getElementById('login-screen').style.display = 'none';
+        document.getElementById('web-content').style.display = 'block';
         document.getElementById('fecha-m').innerText = new Date().toLocaleDateString('es-ES', { weekday:'long', day:'numeric', month:'long' }).toUpperCase();
-        cargarDatos();
+        actualizarReloj();
+        cargar();
     }
 
-    function enviarNoticia() {
+    function enviar() {
         const t = document.getElementById('tit').value.trim();
         const m = document.getElementById('msg').value.trim();
         const r = document.getElementById('ran').value;
         if(!t || !m) return;
-        if(r === "OFICIAL" && prompt("Contraseña de Escritor:") !== CLAVE_OFICIAL) return;
+        if(r === "OFICIAL" && prompt("Contraseña:") !== PASS_ESCRITOR) return;
 
-        const id = "A" + Date.now();
+        const id = "N" + Date.now();
         const data = {
-            id, titulo: t, texto: m, img: document.getElementById('img-url').value,
+            id, titulo: t, texto: m, img: document.getElementById('img').value,
             rango: r, estilo: document.getElementById('est').value,
-            autor: sesionActual.u, casa: sesionActual.h,
-            votos_db: {}, count: 0, time: Date.now()
+            autor: sesion.u, casa: sesion.h, votos_legales: {}, count: 0, time: Date.now()
         };
-
         fetch(`${DB}/${id}.json`, { method: 'PUT', body: JSON.stringify(data) }).then(() => location.reload());
     }
 
-    function cargarDatos() {
+    function cargar() {
         fetch(`${DB}.json`).then(res => res.json()).then(data => {
             if(!data) return;
             const notas = Object.values(data).sort((a,b) => b.time - a.time);
-            let htmlOf = ""; let htmlAl = "";
+            let hOf = ""; let hAl = "";
 
             notas.forEach(n => {
-                const yaVoto = n.votos_db && n.votos_db[sesionActual.u];
-                const content = `
-                    <div class="article ${n.estilo === 'vociferadora' ? 'vociferadora' : ''}">
+                const yaVoto = n.votos_legales && n.votos_legales[sesion.u];
+                const cardClass = n.rango === "OFICIAL" ? "oficial-card" : "alumno-card";
+                const html = `
+                    <div class="article ${cardClass} ${n.estilo === 'vociferadora' ? 'vociferadora' : ''}">
                         <h3>${n.titulo}</h3>
-                        <span class="article-meta">Por: ${n.autor} | Casa: ${n.casa}</span>
+                        <small>🖊️ Redactado por ${n.autor} (${n.casa})</small>
                         ${n.img ? `<img src="${n.img}">` : ''}
                         <p>${n.texto}</p>
-                        <div class="voto-area">
-                            <span class="tag-house">${n.rango}</span>
-                            <button class="btn" style="width: auto; padding: 5px 15px;" onclick="votar('${n.id}')" ${yaVoto ? 'disabled' : ''}>
-                                ${yaVoto ? 'REGISTRADO' : '🔥 GRITAR ('+(n.count || 0)+')'}
+                        <div style="text-align:right; margin-top:10px;">
+                            <button class="voto-btn" onclick="votar('${n.id}')" ${yaVoto ? 'disabled' : ''}>
+                                ${yaVoto ? 'SELLADO' : '🔥 GRITAR ('+(n.count || 0)+')'}
                             </button>
                         </div>
                     </div>
                 `;
-                if(n.rango === "OFICIAL") htmlOf += content; else htmlAl += content;
+                if(n.rango === "OFICIAL") hOf += html; else hAl += html;
             });
 
-            document.getElementById('noticias-oficiales').innerHTML = htmlOf ? `<div class="section-divider">CRÓNICAS OFICIALES</div>` + htmlOf : "";
-            document.getElementById('noticias-alumnos').innerHTML = `<div class="section-divider">CHISMES DE HOGWARTS</div>` + htmlAl;
+            document.getElementById('feed-oficial').innerHTML = hOf ? `<div class="section-title">DECRETOS DEL MINISTERIO</div>` + hOf : "";
+            document.getElementById('feed-alumnos').innerHTML = `<div class="section-title">CHISMES DE PASILLO</div>` + hAl;
         });
     }
 
     async function votar(id) {
         document.getElementById('snd-magic').play();
-        await fetch(`${DB}/${id}/votos_db/${sesionActual.u}.json`, { method: 'PUT', body: JSON.stringify(true) });
+        await fetch(`${DB}/${id}/votos_legales/${sesion.u}.json`, { method: 'PUT', body: JSON.stringify(true) });
         const res = await fetch(`${DB}/${id}/count.json`);
         const val = await res.json() || 0;
         await fetch(`${DB}/${id}/count.json`, { method: 'PUT', body: JSON.stringify(val + 1) });
-        cargarDatos();
+        cargar();
     }
 
-    if(sesionActual) render();
+    if(sesion) mostrarWeb();
 </script>
 </body>
 </html>
