--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div id="main-web" style="display:none;">
         <nav class="nav-tabs">
             <div class="tab active" onclick="changeTab('general')">NOTICIAS GENERALES</div>
-            <div class="tab" onclick="changeTab('staff')">REDACCIÓN CENTRAL 🖋️</div>
+            <div class="tab" onclick="changeTab('staff')">NOTICIAS OFICIALES 🖋️</div>
         </nav>
 
         <header>
@@ -154,7 +154,7 @@
 
 <script>
     const DB = "https://profeta-9c8df-default-rtdb.firebaseio.com/periodico";
-    const CLAVE_REAL = "Orion2026";
+    const CLAVE_REAL = "ProfetaOrion2026";
     let sesion = JSON.parse(localStorage.getItem('p_vFinal_v2'));
 
     function changeTab(tab) {
